--- a/src/_misty-light-base.scss
+++ b/src/_misty-light-base.scss
@@ -432,7 +432,6 @@ header, .context-menu, .megamenu-content, footer{
 }
 
 .mac-seamless-mode #typora-sidebar {
-    background-color: #fafafa;
     background-color: var(--side-bar-bg-color);
 }
 
